CHANGES.txt for Gem Drop Deluxe

RELEASE: 2021_03_14_beta

March 14, 2021
 * Fancy title screen, with copyright, last score,
   high score, and options menu all displayed.

 * Updated code to build against stock cc65
   (V2.19) rather than requiring my extended-headers.
   (Much of that work was rolled into cc65 upstream,
   or is now moot thanks to alternate solutions.)

 * Reduced space used by fonts; no longer trying to
   merge two versions of game font for non-flicker mode;
   just using one of the existing fonts looks better.

 * Rewrote Super IRG mode VBI and title screen DLI in
   inline assembly, to address stability problems.

 * Disable "attract" mode on menu screen, upon any
   console key input.  Keep it disabled during game.

 * Ran source files through:
   "indent -nbfda -npcs -npsl -bli0"

 * Grabbing version # from Makefile and adding to
   README.txt during release process.

RELEASE: 2015_10_02_alpha

October 2, 2015
 * Adding support for non-flickering mode

RELEASE: 2015_08_15_alpha_1

August 15, 2015
 * Added VERSION definition to Makefile
 * Added brief name/version/credits splash screen
 * Created 'release' & 'release-clean' targets, for
   building a release .zip (containing .xex and some .txt files)

August 12, 2015
 * Increased max-kills to 110 (# of possible blocks on
   the screen; not that you'd EVER get a full screen of
   the same block)
 * Font header file generation part of build process.
 * Using #defines for piece picking & matching.
 * Using #defines for keycodes.
 * Using #define'd bits for SDMCTL settings.
 * Fixed likely bug in original game's high score tracking
   (affecting scores over 10,000 points).
 * Using #define'd pointer to OS ROM font (during "UH OH" sequence)
 * Erase pieces right after throwing them, so they don't stay
   next to your character while the cascade effect takes place.
 * Added missing loop pausing routines ("honk" sound/flash,
   "game over" brick wall drop, Level 15 "UH OH" sequence).